feat (components) add button shared component

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 @layer components {
-    .button-blue {
+    .button-primary {
         @apply w-full bg-sky-700 text-white hover:bg-sky-600 py-2 px-4 rounded transition-colors
+    }
+    .button-secondary {
+        @apply w-full bg-white text-sky-700 hover:bg-gray-100 py-2 px-4 rounded transition-colors
     }
 }
