--- a/app/globals.css
+++ b/app/globals.css
@@ -9,4 +9,7 @@
     .button-secondary {
         @apply w-full bg-white text-sky-700 hover:bg-gray-100 py-2 px-4 rounded transition-colors
     }
+    .link {
+        @apply block w-fit text-sky-700 hover:underline
+    }
 }
